test/redeclareConsumedError.slq

def main(){
	x:=0:ğ”¹[]; /// error
	x:=x;
}
